<resources>
    <string name="app_name">PropertyManagementApp</string>
    <string name="title_activity_login">Login</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="title_activity_register">Register</string>

    <string name="alerts">Alerts</string>
    <string name="properties">Properties</string>
    <string name="tenants">Tenants</string>
    <string name="transaction">Transactions</string>
    <string name="ToDo">To-Do List</string>
    <string name="collectRent">Collect Rent</string>
    =======
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_name">Name</string>
    <string name="add_to_do">Add To-Do</string>
    <string name="due_day">Due day:</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="add">Add</string>
    >>>>>>> master
    <string name="hint_address">Address</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State</string>
    <string name="hint_country">Country</string>
    <string name="hint_latitude">Latitude</string>
    <string name="hint_longitude">Longitude</string>
    <string name="hint_purchase_price">Purchase Price</string>
    <string name="btn_add_property">Add Property</string>
    <string name="property_selected">"Property Selected: "</string>

</resources>