<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <import type="com.example.propertymanagementapp.viewmodel.adapter.LoginBindingAdapter"/>
        <variable
            name="viewModel"
            type="com.example.propertymanagementapp.viewmodel.AddPropertyViewModel" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/padding_common"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etAddress"
            android:hint="@string/hint_address"
            android:text="@{viewModel.address}"
            error_text="@{viewModel.addressError}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etCity"
            android:hint="@string/hint_city"
            android:text="@{viewModel.city}"
            error_text="@{viewModel.cityError}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etState"
            android:hint="@string/hint_state"
            android:text="@{viewModel.state}"
            error_text="@{viewModel.stateError}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etCountry"
            android:hint="@string/hint_country"
            android:text="@{viewModel.country}"
            error_text="@{viewModel.countryError}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <EditText
            android:id="@+id/etPurchasePrice"
            android:hint="@string/hint_purchase_price"
            android:text="@{LoginBindingAdapter.convertDoubleToString(viewModel.price)}"
            error_text="@{viewModel.priceError}"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:onClick="@{()-> viewModel.addProperty()}"
            android:id="@+id/btnAddProperty"
            android:hint="@string/btn_add_property"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:visibility='@{viewModel.processing==true? View.VISIBLE : View.GONE}'
            android:id="@+id/pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</layout>